--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "classnames": "^2.3.2",
+    "@emotion/css": "^11.10.0",
+    "@emotion/server": "^11.10.0",
+    "@radix-ui/react-slot": "^1.0.0",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0"
@@ -15,6 +17,7 @@
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
+    "@types/styled-components": "^5.1.26",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.2",
